# stackmachinexx

./: .clang-format  CMakeLists.txt  package.py
src/: CMakeLists.txt  sm.cpp
src/stackmachine/: CMakeLists.txt  StackMachine.hpp  Types.hpp
src/stackmachine/detail/: Opcode.hpp  StackImpl.hpp  Types.hpp  stackimpl.hpp  types.hpp
src/stackmachine/stl/: stl.hpp
tests/: CMakeLists.txt  testStackHandle.cpp  testStackMachine.cpp
